--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,12 @@
 
 #Executable Names
 *.exe
+*.out
 pre-processors/THOR_Mesh_Generator/src/Thor_Mesh_Generator
 
 #Documentation Src Files
 **/html
 **/latex
+
+#Misc
+.DS_Store
