--- a/pre-processors/THOR_Mesh_Generator/test/homogeneous_domain/homogeneous.in
+++ b/pre-processors/THOR_Mesh_Generator/test/homogeneous_domain/homogeneous.in
@@ -1,5 +1,5 @@
-../test/homogeneous_domain/homogeneous.msh
-../test/homogeneous_domain/homogeneous.thrm
+./homogeneous.msh
+./homogeneous.thrm
 
 
-../test/homogeneous_domain/boundary_remap.in
+./boundary_remap.in
