Fix some issues in Makefile (#29)

--- a/THOR/src/Makefile
+++ b/THOR/src/Makefile
@@ -10,7 +10,7 @@ debug:    TYPE := _Debug
 coverage: TYPE := _Coverage
 
 all:      OPT := -O3
-debug:    OPT := -O0 -g
+debug:    OPT := -O0 -g -fbacktrace -ffpe-trap=zero,overflow,underflow
 coverage: OPT := -O0 -g --coverage
 
 #-----------------------------------------------------------------------------------
@@ -21,7 +21,7 @@ LIB     := ../../lib
 
 #-----------------------------------------------------------------------------------
 #Add source files as necessary
-#If the files are not comiled using the genieric rules, add commands under their
+#If the files are not compiled using the generic rules, add commands under their
 #rule declaration. Add these items to FILTER
 #-----------------------------------------------------------------------------------
 SRC :=  \
@@ -96,7 +96,7 @@ LIB_MOD := $(LIB_OBJ:.o=.mod)
 
 #-----------------------------------------------------------------------------------
 #Complex external dependencies. Each of these requires a custom build rule.
-#Intended for depenencies with thier own makefiles or other build system
+#Intended for dependencies with their own makefiles or other build system
 #-----------------------------------------------------------------------------------
 COMP_DEP := \
             libskit.a
