Allow mesh generator to split hexahedrons and prisms (#115)

--- a/pre-processors/THOR_Mesh_Generator/src/makefile
+++ b/pre-processors/THOR_Mesh_Generator/src/makefile
@@ -10,7 +10,7 @@ debug:    TYPE := _Debug
 coverage: TYPE := _Coverage
 
 all:      OPT := -O3
-debug:    OPT := -O0 -g
+debug:    OPT := -O0 -g -fbacktrace -ffpe-trap=zero,overflow,underflow 
 coverage: OPT := -O0 -g --coverage
 
 #-----------------------------------------------------------------------------------
