--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ pre-processors/THOR_Mesh_Generator/src/Thor_Mesh_Generator
 
 #user manual outputs
 docs/usermanual/output/*
+docs/theorymanual/output/*
 
 #manual outputs if someone just makes with latexmk
 .vscode
