--- a/THOR/examples/newInput_keig/newInput_eig_pi.in
+++ b/THOR/examples/newInput_keig/newInput_eig_pi.in
@@ -1,8 +1,10 @@
-!THOR input format version 2.0.
+!THOR input format version 1.0.
 !Lines starting with an exclamation point, !, and blank lines will be ignored.
 !Whitespace is necessary between parameters and param values but is otherwise ignored.
-!Parameters are separated either with new lines (make sure your line endings for your file are UNIX line endings! NOT Windows or Mac) or separated with semicolons, ;.
-!When a parameter is specified it is assumed that the next set of values will be for that parameter, including values on the next line, until all needed values are read.
+!Parameters are separated either with new lines (make sure your line endings for your file are UNIX
+!   line endings! NOT Windows or Mac) or separated with semicolons, ;.
+!When a parameter is specified it is assumed that the next set of values will be for that parameter,
+!   including values on the next line, until all needed values are read.
 !So do NOT specify a parameter name without immediately giving it a value.
 !Other than that, parameter order does not matter
 !Almost all parameters have a default that can be found in the User Manual.
