--- a/THOR/examples/currentInputs/simple_cube_eigenvalue/newInput_cube_eig_pi.in
+++ b/THOR/examples/currentInputs/simple_cube_eigenvalue/newInput_cube_eig_pi.in
@@ -20,7 +20,7 @@
   outerconv           1E-7
   maxinner            2
   maxouter            5000
-  initial_guess       none
+  initial_guess       no
 
 !sweeper specifications
   page_sweep          no
@@ -35,7 +35,7 @@
   qdorder             12
 
 !cross section specifications
-  xs                  cube_eigenvalue_1g.xs
+  xs                  newInput_cube_eigenvalue_1g.xs
   pnorder             0
   upscattering        yes
   multiplying         yes
@@ -48,10 +48,13 @@
   flux_out            pi_hard_eig_1grp.flux
   vtk_flux_out        none
   vtk_mat_out         none
-  vtk_reg_out         yes
+  vtk_reg_out         none
   vtk_src_out         none
   cartesian_map_out   none
   print_xs            no
+
+!reion map specification
+  region_map          1 0
 
 !misc specifications
   execution           yes
